# nhl-led-scoreboard

./: .gitignore  CHANGELOG.md  How to run on SteamDeck.md  README.md  RELEASE NOTES.md  TODO.md  VERSION  apk-requirements  auto-py-to-exe.json  conda_scoreboard_mac.yml  conda_scoreboard_win.yml  emulator_config.json  emulator_requirements.txt  pi5_emulator_config.json  pyproject.toml  requirements-docker.txt  requirements-pi5.txt  requirements.txt  supervisor.conf.example
config/: config.json.nomqtt  config.json.sample  config.schema.json
config/colors/: teams.json
config/layout/: layout_128x64.json  logos.json  logos_64x32.json
docs/: API_NORMALIZATION_GUIDE.md  API_NORMALIZATION_STATUS.md  LOGO_EDITOR_README.md  NHL_API_MODELS.md  README-pi5-launcher.md  REFACTOR_GUIDE.md  game_simulator.md
scripts/: cache_manager.py  install.sh  run.sh
scripts/sbtools/: sb-cleanup-cache  sb-init  sb-upgrade
src/: README-pi5-launcher.md  __init__.py  debug.py  logo_editor.py  main.py  nhl_logo_api.py  pi5_launcher.py  utils.py
src/boards/: base_board.py  boards.py  christmas.py  clock.py  screensaver.py  seasoncountdown.py  seriesticker.py  standings.py  stanley_cup_champions.py  team_summary.py  wxAlert.py  wxWeather.py
src/data/: backup_teams_data.json  config_watcher.py  data.py  layout.py  playoffs.py  scheduler.py  scoreboard.py  scoreboard_config.py  status.py
src/nhl_api/: client.py  data.py  info.py  models.py  object.py  player.py
src/nhl_setup/: nhl_setup.py  validate_json.py
src/renderer/: logos.py  main.py  penalty.py  scoreboard.py
(+37 files in other folders)
